--- a/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
@@ -3,7 +3,7 @@
            type="text"
            :validation="validation"
            :name="displayName"
-           :placeholder="fieldPlaceholder"
+           :placeholder="getInlineSnippet(placeholder)"
            @input="onInput"
            @keydown.up="increaseNumberByStep"
            @keydown.down="decreaseNumberByStep"
