--- a/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -69,6 +69,7 @@
                     <router-view :product="product"
                                  :manufacturers="manufacturers"
                                  :taxes="taxes"
+                                 :attributeSets="attributeSets"
                                  :currencies="currencies">
                     </router-view>
                 {% endblock %}
