--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-base/sw-product-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-base/sw-product-detail-base.html.twig
@@ -1,6 +1,5 @@
 {% block sw_product_detail_base %}
     <div class="sw-product-detail-base">
-
         {% block sw_product_detail_base_basic_info_card %}
             <sw-card :title="$tc('sw-product.detailBase.cardTitleProductInfo')" :isLoading="product.isLoading">
                 {% block sw_product_detail_base_basic_info_form %}
@@ -47,6 +46,14 @@
                     <sw-product-settings-form :product="product"></sw-product-settings-form>
                 {% endblock %}
             </sw-card>
+        {% endblock %}
+
+        {% block sw_product_detail_attribute_sets %}
+            <sw-attribute-set-renderer
+                    v-if="next754"
+                    :entity="product"
+                    :sets="attributeSets">
+            </sw-attribute-set-renderer>
         {% endblock %}
     </div>
 {% endblock %}
