--- a/Resources/administration/src/app/component/form/sw-form-field-renderer/sw-form-field-renderer.html.twig
+++ b/Resources/administration/src/app/component/form/sw-form-field-renderer/sw-form-field-renderer.html.twig
@@ -1,6 +1,7 @@
 {% block sw_form_field_renderer %}
     <component v-bind:is="component"
-               v-bind="getBind()"
+               v-bind="bind"
+               ref="component"
                v-model="currentValue">
         {% block sw_form_field_renderer_inner %}
             <slot>{% block sw_form_field_renderer_inner_slot %}{% endblock %}</slot>
