--- a/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
@@ -2,7 +2,7 @@
     <input :type="showPassword ? 'text' : 'password'"
            :id="id"
            :name="displayName"
-           :placeholder="fieldPlaceholder"
+           :placeholder="getInlineSnippet(placeholder)"
            :disabled="disabled ? 'disabled' : false"
            @input="onInput"
            @change="onChange"
