--- a/Resources/administration/src/app/component/form/sw-textarea-field/sw-textarea-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-textarea-field/sw-textarea-field.html.twig
@@ -1,7 +1,7 @@
 {% block sw_text_field_input %}
     <textarea :id="id"
               :name="displayName"
-              :placeholder="fieldPlaceholder"
+              :placeholder="getInlineSnippet(placeholder)"
               :disabled="disabled ? 'disabled' : false"
               @change="onChange"
               @input="onInput"
