NEXT-1203 - Move the sidebar to the global page component

--- a/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.html.twig
@@ -1,17 +1,9 @@
 {% block sw_card_view %}
-    <div class="sw-card-view" :class="cardViewClasses">
+    <div class="sw-card-view">
         {% block sw_card_view_content %}
             <div class="sw-card-view__content">
                 <slot>{% block sw_card_view_slot_default %}{% endblock %}</slot>
             </div>
-        {% endblock %}
-
-        {% block sw_card_view_sidebar %}
-            <sw-sidebar v-if="sidebar"
-                        class="sw-card-view__sidebar"
-                        propagateWidth>
-                <slot name="card-view-sidebar">{% block sw_card_view_slot_sidebar %}{% endblock %}</slot>
-            </sw-sidebar>
         {% endblock %}
     </div>
 {% endblock %}
