--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.scss
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.scss
@@ -123,12 +123,14 @@ $sw-page-smart-bar-headline-font-weight: 600;
     }
 
     .sw-page__content {
+        display: grid;
+        grid-template-columns: 1fr auto;
         position: relative;
         height: 100%;
 
         &.has--side-content {
             display: grid;
-            grid-template-columns: $sw-page-side-content-default-width 1fr;
+            grid-template-columns: $sw-page-side-content-default-width 1fr auto;
         }
 
         .content__wrapper {
