--- a/Resources/administration/src/module/sw-configuration/page/sw-configuration-detail/sw-configuration-detail.html.twig
+++ b/Resources/administration/src/module/sw-configuration/page/sw-configuration-detail/sw-configuration-detail.html.twig
@@ -29,7 +29,7 @@
     {% endblock %}
 
     {% block sw_configuration_detail_content %}
-        <sw-card-view slot="content" sidebar>
+        <sw-card-view slot="content">
             {% block sw_configuration_detail_content_detail_base %}
                 <sw-configuration-detail-base :group="group" />
             {% endblock %}
