--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -35,7 +35,7 @@
         {% endblock %}
 
         {% block sw_manufacturer_detail_content %}
-            <sw-card-view slot="content" sidebar>
+            <sw-card-view slot="content">
 
             {% block sw_manufacturer_detail_content_language_info %}
                 <sw-language-info
@@ -95,20 +95,24 @@
                 </sw-card>
             {% endblock %}
 
-            {% block sw_manufacturer_detail_sidebar %}
-                <template slot="card-view-sidebar">
-                    <sw-sidebar-media-item ref="mediaSidebarItem">
-                        <template slot="context-menu-items" slot-scope="media">
-                            <sw-context-menu-item @click="setMediaItem(media.mediaItem)">
-                                {{ $tc('sw-manufacturer.detail.labelUseAsLogo') }}
-                            </sw-context-menu-item>
-                        </template>
-                    </sw-sidebar-media-item>
-                </template>
-            {% endblock %}
+
 
         </sw-card-view>
     {% endblock %}
+
+    {% block sw_manufacturer_detail_sidebar %}
+        <template slot="sidebar">
+            <sw-sidebar :propagateWidth="true">
+                <sw-sidebar-media-item ref="mediaSidebarItem">
+                    <template slot="context-menu-items" slot-scope="media">
+                        <sw-context-menu-item @click="setMediaItem(media.mediaItem)">
+                            {{ $tc('sw-manufacturer.detail.labelUseAsLogo') }}
+                        </sw-context-menu-item>
+                    </template>
+                </sw-sidebar-media-item>
+            </sw-sidebar>
+        </template>
+     {% endblock %}
 
     </sw-page>
 {% endblock %}
