--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.scss
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.scss
@@ -12,4 +12,8 @@
     .sidebar__custom-snippet-switch {
         padding: 0 25px;
     }
+
+    .sw-snippet-settings__sidebar {
+        height: 100%;
+    }
 }
