--- a/Resources/administration/src/module/sw-configuration/page/sw-configuration-list/sw-configuration-list.html.twig
+++ b/Resources/administration/src/module/sw-configuration/page/sw-configuration-list/sw-configuration-list.html.twig
@@ -47,7 +47,7 @@
                 <div class="sw-configuration-list__content">
 
                     {% block sw_configuration_list_grid %}
-                        <sw-grid v-if="total || term" :items="configurations" :selectable="false" isFullpage sidebar>
+                        <sw-grid v-if="total || term" :items="configurations" :selectable="false" isFullpage>
 
                             {% block sw_configuration_list_grid_slots %}
                                 <template slot="columns" slot-scope="{ item }">
@@ -124,14 +124,6 @@
                                 {% endblock %}
                             </template>
 
-                            {% block sw_configuration_list_sidebar %}
-                                <sw-sidebar slot="sidebar">
-                                    {% block sw_configuration_list_sidebar_refresh_item %}
-                                        <sw-sidebar-item icon="default-arrow-360-left" :title="$tc('sw-configuration.list.titleSidebarItemRefresh')" @click="onRefresh" />
-                                    {% endblock %}
-                                </sw-sidebar>
-                            {% endblock %}
-
                         </sw-grid>
                     {% endblock %}
 
@@ -145,5 +137,13 @@
                 </div>
             {% endblock %}
         </template>
+
+        {% block sw_configuration_list_sidebar %}
+            <sw-sidebar slot="sidebar">
+                {% block sw_configuration_list_sidebar_refresh_item %}
+                    <sw-sidebar-item icon="default-arrow-360-left" :title="$tc('sw-configuration.list.titleSidebarItemRefresh')" @click="onRefresh" />
+                {% endblock %}
+            </sw-sidebar>
+        {% endblock %}
     </sw-page>
 {% endblock %}
