--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
@@ -33,7 +33,7 @@
         {% endblock %}
 
         {% block sw_product_stream_detail_content %}
-            <sw-card-view slot="content" sidebar>
+            <sw-card-view slot="content">
                 {% block sw_product_stream_detail_content_language_info %}
                     <sw-language-info
                             :entityDescription="placeholder(productStream, 'name', $tc('sw-product-stream.detail.textHeadline'))">
