--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -50,7 +50,6 @@
                                  :items="products"
                                  :sortBy="sortBy"
                                  :sortDirection="sortDirection"
-                                 :sidebar="true"
                                  :isFullpage="true"
                                  :selectable="false"
                                  @edit="onEdit"
@@ -213,18 +212,6 @@
                                         </sw-pagination>
                                     {% endblock %}
                                 </template>
-
-                                {% block sw_product_list_grid_sidebar %}
-                                    <sw-sidebar slot="sidebar">
-                                        {% block sw_product_list_grid_sidebar_refresh %}
-                                            <sw-sidebar-item
-                                                icon="default-arrow-360-left"
-                                                :title="$tc('sw-product.list.titleSidebarItemRefresh')"
-                                                @click="onRefresh">
-                                            </sw-sidebar-item>
-                                        {% endblock %}
-                                    </sw-sidebar>
-                                {% endblock %}
                             {% endblock %}
                         </sw-grid>
                     {% endblock %}
@@ -239,5 +226,17 @@
                 </div>
             {% endblock %}
         </template>
+
+        {% block sw_product_list_sidebar %}
+            <sw-sidebar slot="sidebar">
+                {% block sw_product_list_sidebar_refresh %}
+                    <sw-sidebar-item
+                        icon="default-arrow-360-left"
+                        :title="$tc('sw-product.list.titleSidebarItemRefresh')"
+                        @click="onRefresh">
+                    </sw-sidebar-item>
+                {% endblock %}
+            </sw-sidebar>
+        {% endblock %}
     </sw-page>
 {% endblock %}
