NEXT-1885 - restrict condition types per module / restrict rules per module

--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
@@ -22,7 +22,12 @@
                     <div class="context-prices__toolbar">
 
                         {% block sw_product_detail_prices_price_card_rule_selection %}
-                            <sw-select id="rule" :store="ruleStore" :value="priceGroup.ruleId" validation="required" @input="onRuleChange($event, priceGroup.ruleId)">
+                            <sw-select id="rule"
+                                       :store="ruleStore"
+                                       :criteria="ruleFilter"
+                                       :value="priceGroup.ruleId"
+                                       validation="required"
+                                       @input="onRuleChange($event, priceGroup.ruleId)">
                                 <template slot="result_items" slot-scope="{ item, index }">
                                         <sw-select-option
                                                 :disabled="!!priceRuleGroups[item.id]"
