NTR - Fix rulebuilder rules

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
@@ -5,8 +5,8 @@
                    itemValueKey="value"
                    displayName="label"
                    :store="selectValues"
-                   v-model="isNew"
-                   class="field field--select field--main">
+                   v-model="isDifferent"
+                   class="field--select field--main">
         </sw-select>
     {% endblock %}
 {% endblock %}
