--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
@@ -6,7 +6,7 @@
                    displayName="label"
                    :store="selectValues"
                    v-model="isNew"
-                   class="field field--select field--main">
+                   class="field--select field--main">
         </sw-select>
     {% endblock %}
 {% endblock %}
