NTR - Fix event listeners on sw-password-field

--- a/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-password-field/sw-password-field.html.twig
@@ -6,6 +6,7 @@
            :disabled="disabled ? 'disabled' : false"
            @input="onInput"
            @change="onChange"
+           v-on="additionalEventListeners"
            :value="currentValue"/>
 {% endblock %}
 
