--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
@@ -1,8 +1,49 @@
-<sw-modal v-if="showModal" :title="$tc('sw-plugin.store-login.headline')" variant="small" @closeModal="onCloseModal()">
-    <form @submit.prevent="onLoginClick()">
-        <sw-text-field v-model="shopwareId" :label="$tc('sw-plugin.store-login.labelShopwareId')"></sw-text-field>
-        <sw-password-field v-model="password" :label="$tc('sw-plugin.store-login.labelPassword')"></sw-password-field>
+<sw-modal class="sw-plugin-store-login" v-if="showModal" @closeModal="onCloseModal()" noHeader>
+    <div class="sw-plugin-store-login__close-button-container">
+        <button class="sw-modal__close"
+                :title="$tc('global.sw-modal.labelClose')"
+                :aria-label="$tc('global.sw-modal.labelClose')"
+                @click.prevent="onCloseModal()">
+            {% block sw_modal_close_icon %}
+                <sw-icon name="small-default-x-line-medium" small></sw-icon>
+            {% endblock %}
+        </button>
+    </div>
 
-        <sw-button variant="primary" type="submit">{{ $tc('sw-plugin.store-login.buttonLogin') }}</sw-button>
-    </form>
+    <div class="sw-plugin-store-login__content">
+        <div class="sw-plugin-store-login__illustration">
+            <img :src="'/administration/static/img/plugin--manager-login.png' | asset" alt="">
+        </div>
+        <div class="sw-plugin-store-login__form">
+            <div class="sw-plugin-store-login__information">
+                <h3>{{ $tc('sw-plugin.store-login.headline') }}</h3>
+                <p class="information-text">{{ $tc('sw-plugin.store-login.information') }}</p>
+            </div>
+            <form role="form">
+                <sw-text-field v-model="shopwareId" label="-" v-on:keyup.enter="onLoginClick()">
+                    <div class="shopware-id-label" slot="label">
+                        <span>{{ $tc('sw-plugin.store-login.labelShopwareId') }}</span>
+                        <a href="#" target="_blank">{{ $tc('sw-plugin.store-login.labelShopwareIdHelp') }}</a>
+                    </div>
+                </sw-text-field>
+                <sw-password-field v-model="password" :label="$tc('sw-plugin.store-login.labelPassword')" v-on:keyup.enter="onLoginClick()">
+                </sw-password-field>
+            </form>
+            <div class="forgot-password" >
+                <a :href="$tc('sw-plugin.store-login.forgotPasswordUrl')" target="_blank">Passwort vergessen?</a>
+            </div>
+        </div>
+    </div>
+
+    <div slot="modal-footer" class="sw-plugin-store-login__footer">
+        <div class="footer-information">
+            <span>{{ $tc('sw-plugin.store-login.footerNoAccount') }}</span>
+            <a class="new-account-link" :href="$tc('sw-plugin.store-login.registerAccountUrl')" target="_blank">{{ $tc('sw-plugin.store-login.footerRegisterAccount') }}</a>
+        </div>
+        <div class="footer-button-container">
+            <sw-button class="cancel-button" size="small" @click="onCloseModal()">{{ $tc('sw-plugin.store-login.buttonCancel') }}</sw-button>
+            <sw-button variant="primary" type="submit" size="small" @click="onLoginClick()">{{ $tc('sw-plugin.store-login.buttonLogin') }}</sw-button>
+        </div>
+    </div>
 </sw-modal>
+
