--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
@@ -73,7 +73,7 @@
                                                 {% block sw_settings_snippet_list_column_key_link %}
                                                     <router-link class="sw-settings-snippet-list__column-name" :to="{
                                                             name: 'sw.settings.snippet.detail',
-                                                            params: { key: item[metaId].translationKey },
+                                                            params: { key: item[metaId].translationKey, origin: item[metaId].translationKey },
                                                             query: { ids: queryIds, limit, page, isCustomState }
                                                     }">
                                                         {% block sw_settings_snippet_list_column_key_label %}
