--- a/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
@@ -33,13 +33,15 @@
             v-if="condition.type == 'range'"
             type="number"
             class="field--main has--arrow"
-            v-model="condition.parameters.lte">
+            v-model="condition.parameters.lte"
+            :placeholder="$tc('global.sw-condition.operator.greaterThanEquals')">
     </sw-field>
     <sw-field
             v-if="condition.type == 'range'"
             type="number"
             class="field--main"
-            v-model="condition.parameters.gte">
+            v-model="condition.parameters.gte"
+            :placeholder="$tc('global.sw-condition.operator.lowerThanEquals')">
     </sw-field>
 
     <sw-field v-else
