NEXT-1684 - Fix media move

--- a/Resources/administration/src/module/sw-media/component/sw-media-library/sw-media-library.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sw-media-library/sw-media-library.html.twig
@@ -76,7 +76,7 @@
                                 <sw-button
                                     v-if="showLoadMoreButton"
                                     class="sw-media-library__load-more-button"
-                                    @click="loadItems">
+                                    @click="loadNextItems">
                                     {{ $tc('sw-media.mediaLibrary.labelButtonLoadMore') }}
                                 </sw-button>
                             {% endblock %}
